# slurm_now

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
slurm_now/: __init__.py  api.py  cli.py
