[project]
dynamic = ["version"]
name = "slurm_now"
readme = "README.md"
requires-python = ">=3,<4"
scripts = { snow = "slurm_now.cli:cli" }

[project.optional-dependencies]
table = ["tabulate"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools-scm>=8", "setuptools>=64"]

[tool.setuptools_scm]
# intentionally blank

[tool.setuptools]
packages = ["slurm_now"]

[tool.uv]
package = true

[dependency-groups]
dev = ["mypy", "pre-commit", "ruff", "types-tabulate"]

[tool.ruff]
fix = true
line-length = 120
src = ["slurm_now"]
target-version = "py313"

[tool.ruff.lint]
ignore = ["N815", "N803"]
per-file-ignores = { "tests/**/*test.py" = ["S101"] }
select = ["BLE", "C90", "D", "E", "F", "I", "N", "PGH", "S", "UP", "W"]
unfixable = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ".venv"
python_version = "3.13"
ignore_missing_imports = true
